<resources>
    <string name="app_name">原色</string>
    <string name="chip_full">全部</string>
    <string name="chip_white">白</string>
    <string name="chip_grey">灰</string>
    <string name="chip_red">红</string>
    <string name="chip_orange">橙</string>
    <string name="chip_yellow">黄</string>
    <string name="chip_green">绿</string>
    <string name="chip_cyan">青</string>
    <string name="chip_blue">蓝</string>
    <string name="chip_purple">紫</string>
    <string name="chip_other">其他</string>
    <string name="fab_search_hint">搜索颜色</string>
    <string name="text_color_pinyin" translatable="false">COLOR PINYIN</string>
    <string name="text_color_name" translatable="false">COLOR NAME</string>
    <string name="text_color_hex" translatable="false">COLOR HEX</string>
    <string name="text_color_rgb" translatable="false">COLOR RGB</string>
    <string name="text_color_cmyk" translatable="false">COLOR CMYK</string>
    <string name="text_load_failed" translatable="false">加载失败</string>
    <string name="text_app_widget_preview_pinyin" translatable="false">JIN LIAN HUA CHENG</string>
    <string name="text_app_widget_preview_name" translatable="false">金莲花橙</string>

    <string name="copied_to_clipboard">已复制到剪切板</string>
    <string name="menu_info">关于</string>
    <string name="menu_random">随机</string>
    <string name="menu_settings">设置</string>
    <string name="menu_favorite_list" translatable="false">喜欢列表</string>
    <string name="quick_filter">快速筛选</string>
    <string name="color_data_copyright" translatable="false">
        <p>Copyright © 2013 by <a href="http://dmyz.org/">Perchouli</a> Shanzhai to <a href="http://nipponcolors.com/">Nipponcolors</a>\n
            参看: 色谱 中科院科技情报编委会名词室.科学出版社,1957. Adobe RGB / CMYK FOGRA39, Dot Gain 15% <img alt="Screenshot" src="http://zhongguose.com/img/share.jpg" width="1" /><a href="https://beian.miit.gov.cn/">沪ICP备17025116号-2</a>
        </p>
    </string>
    <string name="author_info" translatable="false">Designed by 禄眠</string>

    <!--    <string name="greet_morning">早上好</string>-->
    <!--    <string name="greet_afternoon">下午好</string>-->
    <!--    <string name="greet_evening">晚上好</string>-->
    <!--    <string name="greet_deep_night">深夜了，早点休息~</string>-->
    <!--    <string name="btn_close">关闭</string>-->
    <!--    <string name="btn_next">换一个</string>-->
    <string name="btn_back">返回</string>
    <string name="btn_share">分享</string>

    <string name="share_app_content">
        简洁的颜色查询工具，基于中国传统色：\n
        https://sj.qq.com/appdetail/com.wzl.originalcolor
    </string>
    <string name="share_to">分享到</string>
    <!--    <string name="donate_first_hint">作者很懒的~</string>-->
    <!--    <string name="donate_second_hint">你还要继续吗？</string>-->
    <!--    <string name="donate_third_hint">那我可就不客气了~</string>-->
    <!--    <string name="donate_last_hint">(￣▽￣)～■干杯□～(￣▽￣)</string>-->
    <string name="empty_data">无数据</string>

    <string name="app_version">版本</string>
    <string name="current_theme_color">当前主题色</string>
    <string name="haptic_feedback">触觉反馈</string>
    <string name="period_refresh_widget">定时刷新小组件</string>
    <string name="share_app">分享APP</string>
    <string name="add_app_widget">添加小组件</string>
    <string name="clear_cache">清除缓存</string>
    <string name="empty_list_hint">抱歉，没有找到～</string>

    <string name="dialog_shortcut_permission_title">快捷方式权限</string>
    <string name="dialog_shortcut_permission_message">由于MIUI系统的限制，需要手动授予桌面快捷方式的权限。才能够添加小组件到主屏幕</string>
    <string name="dialog_shortcut_permission_position_button">好的</string>

    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_agreement_content" translatable="false">
        <![CDATA[
<p><i>禄眠</i>（以下简称“我们”）依据本协议为用户（以下简称“你”）提供<i>原色</i>服务。本协议对你和我们均具有法律约束力。</p>
<h4>一、本服务的功能</h4>
<p>你可以使用本服务进行颜色查询、复制、分享。</p>
<h4>二、责任范围及限制</h4>
<p>你使用本服务得到的结果仅供参考，实际情况以官方为准。</p>
<h4>三、隐私保护</h4>
<p>我们重视对你隐私的保护，你的个人隐私信息将根据《隐私政策》受到保护与规范，详情请参阅《隐私政策》。</p>
<h4>四、其他条款</h4>
<p>4.1 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。</p>
<p>4.2 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。</p>
]]>
    </string>
    <string name="privacy_policy_content" translatable="false">
        <![CDATA[
<p>本政策仅适用于禄眠（以下简称“我们”）开发的相关产品。</p>
<p>如果有人决定使用我们服务，本页面用于向访问者告知我们有关个人信息收集、使用和披露的政策。</p>
<p>如果您选择使用我们服务，则您同意收集和使用与本政策相关的信息。我们收集的个人信息用于提供和改进服务。我们不会使用或与任何人共享您的信息，本隐私政策中所述的情况除外。</p>
<p>除非本隐私政策中另有定义，本隐私政策中使用的术语与我们的条款和条件具有相同的含义，可在原色访问这些条款和条件。</p>
<h2>信息收集和使用</h2>
<p>为了获得更好的体验，在使用我们的服务时，我们不会收集任何个人身份信息。我们会收集设备相关信息，包括、软件安装列表信息、传感器信息，用于分享应用相关信息以及卡片动态展示。</p>
<h2>记录数据</h2>
<p>我们想通知您，每当您使用我们服务时，如果应用程序出现错误，我们会在您的手机上收集数据和信息（通过第三方产品），称为日志数据。该日志数据可能包括您的设备互联网协议（“IP”）地址、设备名称、操作系统版本、使用我们服务时的应用程序配置、您使用服务的时间和日期等信息，以及其他统计数据。</p>
<h2>服务供应商</h2>
<p>我们可能因以下原因雇用第三方公司和个人：</p>
<p>方便我们的服务；</p>
<p>代表我们提供服务；</p>
<p>执行与服务相关的服务；或者</p>
<p>帮助我们分析我们的服务的使用情况。</p>
<p>我们希望告知本服务的用户，这些第三方可以访问他们的个人信息。原因是代表我们执行分配给他们的任务。但是，他们有义务不披露这些信息或将这些信息用于任何其他目的。</p>
<h2>安全</h2>
<p>我们重视您向我们提供您的个人信息的信任，因此我们正在努力使用商业上可接受的方式来保护它。但请记住，没有任何一种互联网传输方法或电子存储方法是 100% 安全可靠的，我们无法保证其绝对安全。</p>
<h2>其他网站的链接</h2>
<p>本服务可能包含其他网站的链接。如果您点击第三方链接，您将被定向到该网站。请注意，这些外部网站并非由 [me/us] 运营。因此，我们强烈建议您查看这些网站的隐私政策。我们无法控制任何第三方网站或服务的内容、隐私政策或做法，也不承担任何责任。</p>
<h2>自启动和关联启动说明</h2>
<p>为确保桌面小组件能够定时刷新，本应用须使用自启动能力，将存在一定频率通过系统发送广播唤醒本应用自启动或关联启动行为，是因实现功能及服务所必要的。</p>
<h2>粘贴板信息</h2>
<p>仅用于复制颜色的详细信息，包括颜色的HEX、RGB、CMYK等相关信息，</p>
<h2>本隐私政策的变更</h2>
<p>我们可能会不时更新我们的隐私政策。因此，建议您定期查看此页面是否有任何更改。我们将通过在此页面上发布新的隐私政策来通知您任何更改。</p>
<p>本政策自2023年9月10日起施行</p>
<h2>联系我们</h2>
<p>如果您对我们隐私政策有任何疑问或建议，请随时通过<strong>aifengyeah@163.com</strong>联系我们。</p>
]]>
    </string>

    <!-- Guides -->
    <string name="guide_long_press">长按颜色卡片可设置为主题色</string>
    <string name="guide_title_tap">轻触标题栏可快速定位到当前主题色</string>
    <string name="guide_random">点击可滚动到随机颜色位置</string>
</resources>
