<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quick_filter"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/colorChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:checkedChip="@id/chipFull"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_full" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_grey" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_orange" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_yellow" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_green" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_cyan" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_blue" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_purple" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_other" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>