<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:collapsedTitleTextColor="@color/primary_color"
            app:expandedTitleTextColor="@color/primary_color"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_random_cube"
                app:navigationIconTint="@color/primary_color"
                app:title="@string/app_name">

                <Button
                    android:id="@+id/settingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.App.IconButton"
                    app:iconTint="@color/primary_color"
                    android:layout_gravity="end"
                    android:contentDescription="@string/menu_settings"
                    app:icon="@drawable/ic_settings" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/emptyDataView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_data"
        android:scaleType="centerInside"
        android:src="@drawable/bg_empty_search"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:spanCount="3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_search_hint"
        android:tag="search"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/white" />

    <com.google.android.material.search.SearchView
        android:id="@+id/colorSearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/fabSearch">

        <include
            android:id="@+id/searchInnerView"
            layout="@layout/layout_inner_search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>